--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="header__logo"></div>
+      <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни?
@@ -37,42 +37,42 @@
         </div>
       </section>
       <section class="techniques">
-        <h2 class="section-title section-title_techniques">Техники обучения</h2>
-        <h3 class="section-subtitle section-subtitle_techniques">Пять практик от Барбары Оакли</h3>
-        <ul class="cards cards_techniques">
-          <li class="cards__item cards__item_techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+        <ul class="cards">
+          <li class="cards__item">
             <img class="cards__image" src="./images/cards-attention.png" alt="практика-внимание">
-            <h4 class="cards__title cards__title_techniques">Два вида внимания</h4>
-            <p class="cards__description cards__description_techniques">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+            <h4 class="cards__title">Два вида внимания</h4>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </li>
-          <li class="cards__item cards__item_techniques">
+          <li class="cards__item">
             <img class="cards__image" src="./images/cards-recall.png" alt="практика-вcпоминать">
-            <h4 class="cards__title cards__title_techniques">Recall</h4>
-            <p class="cards__description cards__description_techniques">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+            <h4 class="cards__title">Recall</h4>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
-          <li class="cards__item cards__item_techniques">
+          <li class="cards__item">
             <img class="cards__image" src="./images/cards-interliving.png" alt="практика-интерливинг">
-            <h4 class="cards__title cards__title_techniques">Интерливинг</h4>
-            <p class="cards__description cards__description_techniques">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+            <h4 class="cards__title">Интерливинг</h4>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
-          <li class="cards__item cards__item_techniques">
+          <li class="cards__item">
             <img class="cards__image" src="./images/cards-question.png" alt="практика-вопросы">
-            <h4 class="cards__title cards__title_techniques">Вопросы</h4>
-            <p class="cards__description cards__description_techniques">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+            <h4 class="cards__title">Вопросы</h4>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </li>
-          <li class="cards__item cards__item_techniques">
+          <li class="cards__item">
             <img class="cards__image" src="./images/cards-competence.png" alt="практика-компетентности">
-            <h4 class="cards__title cards__title_techniques">Иллюзия компетентности</h4>
-            <p class="cards__description cards__description_techniques">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+            <h4 class="cards__title">Иллюзия компетентности</h4>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
         </ul>
       </section>
       <section class="video">
-        <h2 class="section-title section-title_video">Видео нa TED</h2>
-        <h3 class="section-subtitle section-subtitle_video">Для тех, кто любит прокрастинировать</h3>
+        <h2 class="section-title">Видео нa TED</h2>
+        <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
         <div class="video__iframes">
-        <iframe class="video__iframe" id="5MgBikgcWnY" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
-        <iframe class="video__iframe" id="arj7oStGLkU" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+        <iframe class="video__iframe" id="5MgBikgcWnY" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+        <iframe class="video__iframe" id="arj7oStGLkU" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -133,10 +133,12 @@
       </section>
       <section class="khan">
         <div class="khan__container">
-          <h2 class="khan__author">Салман Хан</h2>
-          <h3 class="khan__title">Весь мир — школа</h3>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
-          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <blockquote class="khan__quote">
+          <p>Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          </blockquote>
+          <h3 class="khan__quote-author">Джордж Лукас</h3>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book.jpg" alt="книга Салман Хан, Весь мир - школа">
@@ -193,9 +195,9 @@
         <div class="kaufman__triangle rotation"></div>
       </section>
       <section class="resources">
-        <h2 class="section-title section-title_resources">Полезные ресурсы</h2>
-        <h3 class="section-subtitle section-subtitle_resources">Больше материалов о техниках и лайфхаках обучения</h3>
-        <nav class="resources__logo-zone">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+        <div class="resources__logo-zone">
           <a class="resources__link" href="#">
             <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="арзамас">
           </a>
@@ -208,13 +210,13 @@
           <a class="resources__link" href="#">
             <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="полка">
           </a>
-        </nav>
+        </div>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <div class="footer__logo"></div>
+          <div class="logo logo_place_footer"></div>
           <p class="footer__author"> &copy; Медовник Даниил</p>
         </div>
         <nav class="footer__column footer__column_content_info">
